                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 02-06-2005 fixed: system info storage percentages now adds up to 100 as they should.
 - 02-06-2005 fixed: Fat-X limit workaround didn't apply to renaming.
 - 02-06-2005 added: Milkdrop - Ability to select a folder or a zip file containing presets from the xml config file.
 - 02-06-2005 fixed: Milkdrop - Problems with certain presets not loading in correctly.
 - 02-06-2005 added: zip support. this means, any media can be viewed straight from .zip. playback of big .avi's 
                     not recommended, although supported. currently .ogg playback is broken.
 - 02-06-2005 changed: hopefully way better error handling around mplayer. it shouldn't crash entire xbmc on a crash.
 - 02-06-2005 fixed: dvdplayer would crash if TTFSubtitle fonts where selected
 - 02-06-2005 changed/fixed: Moved videobuffer handling from inside libmpeg2 to xbmc, fixes some menu's where highlight didn't work. 
 - 01-06-2005 added: Milkdrop Preset changing thanks to Bizzeh.  Requires new keymap, skin + Milkdrop.vis.
 - 01-06-2005 added: SMB Share Controll: Share group definitions are now complete [GeminiServer]
 - 31-05-2005 updated: Chinese (Simple) language file (Thnx to gaocuo)
 - 31-05-2005 fixed: ogg streams got deleted from music database when reorg'ing even if the ogg file exists
 - 31-05-2005 fixed: music scanning, vorbisfile.dll was not loaded
 - 31-05-2005 changed: section loader for dll's is now thread save
 - 31-05-2005 fixed: my music, sections and dll's got unloaded even if they are not loaded
 - 31-05-2005 fixed: ogg files without vorbis comments could not be played
 - 31-05-2005 fixed: paplayer could crash when next song is played